src/main/java/com/example/baseproject/global/error/exception/BaseException.java
package com.example.baseproject.global.error.exception;

import lombok.Getter;

@Getter
public class BaseException extends RuntimeException {
    private final ErrorCode errorCode;

    public BaseException(ErrorCode errorCode){
        super();
        this.errorCode = errorCode;
    }
}